namespace java com.moseeker.thrift.gen.dao.struct.wordpressdb
namespace py thrift_gen.gen.dao.struct.wordpressdb


struct WordpressCommentmetaDO {

	1: optional i32 metaId,	//null
	2: optional i32 commentId,	//null
	3: optional string metaKey,	//null
	4: optional string metaValue	//null

}
